# lanci

./: .gitignore  Cargo.toml  README.md  config.json
assets/templates/: back.html  front.html  style.css
src/: anki.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  markdown.rs
src/crawler/: mod.rs
src/crawler/leetcode/: mod.rs  question.rs  solution.rs  submission.rs
tests/fixtures/leetcode/: submission_code_expected.py  submission_code_numbered.txt
