[package]
name = "lanci"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
comrak = "0.52"
fantoccini = "0.22"
genanki-rs = "0.4"
governor = "0.10"
html2md = "0.2"
lol_html = "2.7"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
